communit div finished

--- a/index.html
+++ b/index.html
@@ -15,37 +15,40 @@
   </style>
 </head>
 <body>
-  <div class="community">
-    <h1>Join our community</h1>
-    <h2 id="community-h2">30-day, hassle-free money back guarantee</h2>
-    <p>
-      Gain access to our full library of tutorials along with expert code reviews. 
-      Perfect for any developers who are serious about honing their skills.
-    </p>
-  </div>
 
-  <div class="subscription">
-    <h1>Monthly Subscription</h1>
-      <div class="subscription-price">
-        <span class="price">&dollar;29</span>
-        <span id="subscription-price-month">per month</span>
-      </div>
-    <p>Full access for less than &dollar;1 a day</p>
-    <a id="subscription-sign" href="#">Sign Up</a>
-  </div>
-
-  <div class="whyus">
-    <h1>Why Us</h1>
-    <ul>
-      <liI>Tutorials by industry experts</liI>
-      <liI>Peer &amp; expert code review</liI>
-      <liI>Coding exercises</liI>
-      <liI>Access to our GitHub repos</liI>
-      <liI>Community forum</liI>
-      <liI>Flashcard decks</liI>
-      <liI>New videos every week</liI>
-    </ul>
-  </div>
+  <section class="join-community">
+    <div class="community">
+      <h1 class='community-text'>Join our community</h1>
+      <h2 class="community-h2 community-text">30-day, hassle-free money back guarantee</h2>
+      <p class='community-text join-text'>
+        Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.
+      </p>
+    </div>
+  
+    <div class="subscription">
+      <h1>Monthly Subscription</h1>
+        <div class="subscription-price">
+          <span class="price">&dollar;29</span>
+          <span id="subscription-price-month">per month</span>
+        </div>
+      <p>Full access for less than &dollar;1 a day</p>
+      <a id="subscription-sign" href="#">Sign Up</a>
+    </div>
+  
+    <div class="whyus">
+      <h1>Why Us</h1>
+      <ul>
+        <liI class='join-text'>Tutorials by industry experts</liI>
+        <liI class='join-text'>Peer &amp; expert code review</liI>
+        <liI class='join-text'>Coding exercises</liI>
+        <liI class='join-text'>Access to our GitHub repos</liI>
+        <liI class='join-text'>Community forum</liI>
+        <liI class='join-text'>Flashcard decks</liI>
+        <liI class='join-text'>New videos every week</liI>
+      </ul>
+    </div>
+  </section>
   
   <footer>
     <p class="attribution">
