--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     </div>
   
     <div class="subscription">
-      <h1>Monthly Subscription</h1>
+      <h1 id='subscription-h1' class='subscription-text'>Monthly Subscription</h1>
         <div class="subscription-price">
           <span class="price">&dollar;29</span>
-          <span id="subscription-price-month">per month</span>
+          <span class='subscription-text' id="subscription-price-month">per month</span>
         </div>
-      <p>Full access for less than &dollar;1 a day</p>
-      <a id="subscription-sign" href="#">Sign Up</a>
+      <p id='subscription-text-p' class='subscription-text'> Full access for less than &dollar;1 a day</p>
+      <div class="button">
+        <a id="subscription-sign" href="#">Sign Up</a>
+      </div>
+      
     </div>
   
     <div class="whyus">
