--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     </div>
   
     <div class="whyus">
-      <h1>Why Us</h1>
+      <h1 class='whyus-h1'>Why Us</h1>
       <ul>
-        <liI class='join-text'>Tutorials by industry experts</liI>
-        <liI class='join-text'>Peer &amp; expert code review</liI>
-        <liI class='join-text'>Coding exercises</liI>
-        <liI class='join-text'>Access to our GitHub repos</liI>
-        <liI class='join-text'>Community forum</liI>
-        <liI class='join-text'>Flashcard decks</liI>
-        <liI class='join-text'>New videos every week</liI>
+        <li class='whyus-text'>Tutorials by industry experts</li>
+        <li class='whyus-text'>Peer &amp; expert code review</li>
+        <li class='whyus-text'>Coding exercises</li>
+        <li class='whyus-text'>Access to our GitHub repos</li>
+        <li class='whyus-text'>Community forum</li>
+        <li class='whyus-text'>Flashcard decks</li>
+        <li class='whyus-text'>New videos every week</li>
       </ul>
     </div>
   </section>
